fix pdf render issue, fix close button issue on small screen and cursor change for image

--- a/components/file_preview_modal/file_preview_modal_header/file_preview_modal_header.scss
+++ b/components/file_preview_modal/file_preview_modal_header/file_preview_modal_header.scss
@@ -1,4 +1,5 @@
 .file-preview-modal-header {
+    position: relative;
     display: grid;
     width: 100%;
     height: 72px;
