--- a/components/file_preview_modal/file_preview_modal_main_actions/file_preview_modal_main_actions.scss
+++ b/components/file_preview_modal/file_preview_modal_main_actions/file_preview_modal_main_actions.scss
@@ -2,6 +2,7 @@
 
 .file-preview-modal-main-actions {
     &__actions {
+        z-index: 999;
         display: flex;
         flex-direction: row;
         align-items: center;
